Featured API endpoint (#887)
